k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easypwned
spec:
  ports:
    - name: http
      port: 3342
      protocol: TCP
      targetPort: 3342
  selector:
    app: easypwned
