k8s/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller-easypwned
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: easypwned
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: rke2-ingress-nginx
      ports:
        - port: 3342
          protocol: TCP
